// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formml declaration grammar > annotation > declare annotation 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": []
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > declare annotation with multiple parameters 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "name"
        },
        {
          "$type": "Parameter",
          "name": "value"
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > declare annotation with one parameter 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "name"
        }
      ]
    }
  ]
}"
`;
